--- a/Estilos.css
+++ b/Estilos.css
@@ -17,7 +17,7 @@ p{
 
 body{
     margin: 0;
-    font-family: "Georia", serif;
+    font-family: "Times New Roman", Times, serif;
     background-color: #2B2B28;
 }
 
