--- a/Estilos.css
+++ b/Estilos.css
@@ -58,6 +58,21 @@ header .logo{
 
 }
 
+.logo {
+  display: flex;
+  align-items: center; 
+  gap: 10px;
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.logo img {
+  width: 70px;  
+  height: auto;
+}
+
 header .container{
     display: flex;
     flex-direction: column;
@@ -157,29 +172,38 @@ header a:hover{
 .carta:first-child{
 background-image: linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.7)
     )
-    ,url(Media/Windowns.webp);
+    ,url(Media/Dawone.jpg);
 }
 
 
 .carta:nth-child(2){
 background-image: linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.7)
     )
-    ,url(Media/Mac.webp);
+    ,url(Media/dawto.jpg);
 }
 
 .carta:nth-child(3){
 background-image: linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.7)
     )
-    ,url(Media/linux.webp);
+    ,url(Media/Dawtri.jpg);
+}
+
+.carta:nth-child(4){
+background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.7)
+    )
+    ,url(Media/dawfor.jpg);
 }
 
 footer{
